--- a/dej/dej-e.html
+++ b/dej/dej-e.html
@@ -76,9 +76,16 @@
 
 
 	<h2> kriza </h2>
-		<p>latifundium - bohati ludia s velkymi statkami</p>
+		<p>latifundium - velkostatkari, vlastnia velke polia, pracuju pre nich otroci, oni nie ze len nepracuju, ale pribudaju im peniaze a stale su vacsi a vacsi. odkupuju male polia a ludia oc na nich pracovali uz nemaju pracu</p>
 		<br/>
-		<p>pracuju pre nich otroci, ktorych je stale viac a viac chudobni ludia im predavaju svoje majetky a idu do miest nemozu si dovolit ist do vojny bohati si u chydobnych kupuju hlasyvojenske</p>
+		<p>pracuju pre nich otroci, ktorych je stale viac a viac chudobni ludia im predavaju svoje majetky a idu do miest nemozu si dovolit ist do vojny bohati si u chydobnych kupuju hlasy</p>
+		<p> tito ludia nemozu ist na vojnu, lebo si to nemozu dovolit - za bol sa vtedy neplatilo</p>
+		<p>vznikaju problemy hospodarske(peniaze), vojenske(nemozu ist na vojnu), socialne(rozdelenie spolocnosti), spravne(vladnu bohati), moralne(kupuju hlasy)</p>
+		<p>vznikaju vzbury otrokov</p>
+		<ul>
+			<li>149 p.n.l. - vpodstate pvne povstanie otrokov</li>
+			<li>79 p.n.l. - <b> spartakovo povstanie </b></li>
+		</ul>
 		<p>riesia to GRACHOVCI - pozemkove maximum</p>
 		<ul>
 			<li>obmedzia mnozstvo majetku, zvysok rozdaju</li>
@@ -90,4 +97,52 @@
 			<li>spravil <i>zoldniersku armadu</i>, zold, zoldnierov</li>
 			<li>vojakom plati</li>
 		</ul>
+	<h2> po krize </h2>
+	<p> vznikaju dve politicke strany </p>
+	<ul>
+		<li>
+			<p>populari</p>
+			<ul>
+				<li>strana ludu</li>
+				<li>gaius marius</li>
+				<li>
+					<p>Program:</p>
+					<ul>
+						<li>reformy - viac liberalni</li>
+						<li>postavenia lud.vrstiev</li>
+					</ul>
+				</li>
+			</ul>
+		</li>
+		<li>
+			<p>optimati</p>
+			<ul>
+				<li>strana nobility</li>
+				<li>senat, velkostatkari</li>
+				<li>L.C.Sulla</li>
+				<li>Program - udrzat si moc a vplyv</li>
+				<li>proskripcie</li>
+			</ul>
+		</li>
+	</ul>
+	<p><b>zacina sa obcianska vojna</b></p>
+	<p>hah vyhral Sulla s optimatmi</p>
+	<p>vznika <b> triumvirat </b></p>
+	<ul><li>vlada troch muzov</li></ul>
+	<p>triumviraty boli dva</p>
+	<ol>
+		<li>
+			<h3>prvy triumvirat</h3>
+			<img src = "prvy_triumvirat.png" width = 300/>
+			<p>samozrejme ze sa navzajom povrazdili az ostal iba <b>julius caesar</b></p>
+			<p><a href = "http://socialstudiesforkids.com/articles/worldhistory/firsttriumvirate.htm">social tudies for kids na tuto temu</a></p>
+		</li>
+		<li>
+			<h3>druhy triumvirat</h3>
+			<p>34-31 p.n.l</p>
+			<img src = "druhy_triumvirat.png" width = 300/>
+			<p>vyhral <b> oktavianus </b><br/>
+			oktavianus bol prvym <b>cisaron</b>, samozrejme, lebo cezar nemohol byt <i>cisar</i>, kedze to pochadza z jeho mena</p>
+			<p><a href = "http://socialstudiesforkids.com/articles/worldhistory/secondtriumvirate.htm">social studies for kids na tuto temu</a> - je to celkom kul stranka</p>
+		</li>
 </html>
