--- a/dej/dej-e.html
+++ b/dej/dej-e.html
@@ -121,28 +121,51 @@
 				<li>senat, velkostatkari</li>
 				<li>L.C.Sulla</li>
 				<li>Program - udrzat si moc a vplyv</li>
-				<li>proskripcie</li>
+				<li>proskripcie:<ul><li>zoznam ludi, ktorych ktokolvek moze zabit</li></ul></li>
 			</ul>
 		</li>
 	</ul>
 	<p><b>zacina sa obcianska vojna</b></p>
 	<p>hah vyhral Sulla s optimatmi</p>
+	<p>vyhlasil monarchiu, no zomrel 78 p.n.l.</p>
 	<p>vznika <b> triumvirat </b></p>
-	<ul><li>vlada troch muzov</li></ul>
+	<ul><li>vlada troch muzov, rozdelili si uzemie:
+	</li></ul>
 	<p>triumviraty boli dva</p>
 	<ol>
 		<li>
 			<h3>prvy triumvirat</h3>
+			<p>60.p.n.l. - 55 p.n.l. (?)</p>
 			<img src = "prvy_triumvirat.png" width = 300/>
 			<p>samozrejme ze sa navzajom povrazdili az ostal iba <b>julius caesar</b></p>
 			<p><a href = "http://socialstudiesforkids.com/articles/worldhistory/firsttriumvirate.htm">social tudies for kids na tuto temu</a></p>
+			<ul>
+				<li>cezar mal uzemie francuzska</li>
+				<li>gaius pompeius mal uzemie talianska</li>
+				<li>marcus licinius mal vychod</li>
+			</ul>
+			<b>zacali sa zabijat</b>
+			<ol>
+				<li>crassus a pompeyus boli konzulmi</li>
+				<li>crassus zomrel v bitke</li>
+				<li>cezar zacal expandovat - prekrocil rubykon</li>
+				<li>pompeius utiekol do egyptu</li>
+				<li>zabili ho v egypte :)</li>
+				<li>cezara nakoniec zabodali polonaheho ked utekal a potkol sa na shodoch <small>(noob)</small></li>
+			</ol>
 		</li>
 		<li>
 			<h3>druhy triumvirat</h3>
+			<p> rok po cezarovej smrti </p>
 			<p>34-31 p.n.l</p>
 			<img src = "druhy_triumvirat.png" width = 300/>
 			<p>vyhral <b> oktavianus </b><br/>
 			oktavianus bol prvym <b>cisaron</b>, samozrejme, lebo cezar nemohol byt <i>cisar</i>, kedze to pochadza z jeho mena</p>
 			<p><a href = "http://socialstudiesforkids.com/articles/worldhistory/secondtriumvirate.htm">social studies for kids na tuto temu</a> - je to celkom kul stranka</p>
+			<ul>
+				<li>antonius mal vychod z egypt</li>
+				<li>gaius octavois ziskal francuzsko a zapad</li>
+				<li>leipidus mal cast afriky pod talianskom</li>
+			</ul>
 		</li>
 </html>
