--- a/dej/dej-e.html
+++ b/dej/dej-e.html
@@ -163,9 +163,69 @@
 			oktavianus bol prvym <b>cisaron</b>, samozrejme, lebo cezar nemohol byt <i>cisar</i>, kedze to pochadza z jeho mena</p>
 			<p><a href = "http://socialstudiesforkids.com/articles/worldhistory/secondtriumvirate.htm">social studies for kids na tuto temu</a> - je to celkom kul stranka</p>
 			<ul>
-				<li>antonius mal vychod z egypt</li>
+				<li>antonius mal vychod a egypt</li>
 				<li>gaius octavois ziskal francuzsko a zapad</li>
 				<li>leipidus mal cast afriky pod talianskom</li>
 			</ul>
 		</li>
+		<br/>
+		<h2> principat vs dominat </h2>
+		<table border = 1>
+			<tr>
+				<td></td>
+				<td><h3>Principat</h3></td>
+				<td><h3>Dominat</td></h3>
+			</tr>
+			<tr>
+				<td>preklad</td>
+				<td>Princes inter pares - prvy medzi rovnymi</td>
+				<td>Dominus et deus - pan a boh</h3>
+			</tr>
+			<tr>
+				<td>forma vlady</td>
+				<td>hah ako komunisti - "My SmE Si VsEtCi RoVnI" ale vskutocnosti vladne on </td>
+				<td>vpodstate orientalna despocia (kubo to je to ze panovnik je povazovany za boha)</h3>
+			</tr>
+		</table>
+		<h3>oktavianus</h3>
+		<table> <tr>
+			<td>
+				<ul>
+					<li>bol ako boh - zobral prezyvku <i> augustus </i><br/></li>
+					<li>pretoriani - prvi vojaci co mohli vstupit do rimu - vela veci radili - mali cisara ochranovat, no nakoniec ho sami zavrazdili<img src = xd.png height = 20/></li>
+					<li>stare dievky platili specialne dane</li>
+					<li>upevnil kult bohyne vesty - domacnosti: podoroval aby ludia mali vela deti, svadby boli povinne</li>
+					<li><b>zakon o dedicnost tronu</b> - cisar urci nastupcu - nie uplne rodinu - existuje podla toho aj "dynastia adoptovanych cisarov", posledne odbdobie, ktore znamenalo rozkvet rimu, po tom - <small>(citujem hudakovu)</small>cele zle - Moze to byt preto, lebo tento system adoptovanych cisarov je naozaj celkom funkcny - adoptuje si dieta a vychova ho presne tak ako chce, na cisara, takze vznikne cisar velmi schopny, vychovany presne na to na co ma</li>
+					<li> rozvoj kultury - zacian velka vystavba rimskej rise a mesta rima ako takeho - rozsiruje sa architektura, kultura - chlieb a hry: kupele, divadla, spolocenske udalosti; kazdy si najde svoje zamestnanie, rozvija sa obhod, remesla: <i>"dostal som rim z tehal a zanecham rim z mramoru"</i> <small>(alebo tak nejako)</small></li>
+					<li> vovnutri v rime sa nebolojvalo (od rubykonu nadol), uzatvaraju sa diplomaticke dohody s germanmi, germani sa zacinaju stavat sucastou rimu, dostavaju rimske obcianstvo, zacinaju sa vystavovat pevnosti na hraniciach - <b><i> limes romanus </i></b></li>
+					<ul>
+						<li> cast limes romanus bola aj na slovensku </li>
+						<li> naviac je zachovane v anglicku - <i> hadrianov val </i> </li>
+						<li> <img src=limes-romanus.png  width = 300 /> </li>
+						<li> a takto mohol vyzera taky rimansky tabor:<br/> <img src=rimsky-tabor.png width = 300 /> </li>
+					</ul>
+				</ul>
+			</td>
+			<td> <img src=augustus.jpg width = 200 /> </td>
+		</tr></table>
+		<h3> tiberius </h3>
+		<p> celkom staliblny, no stiahol sa do sildla na ostrove capri, riadil odtial risu dopismi a listami, imperium fungovalo</p>
+		<h3> kaligula </h3>
+		<p> jeho syn, vladol slubne, daval mnoho vyhod, vyhnanci sa mohli vracat na uzemie..., no potom zosalel az kym ho nezabil vodca pretorianov  - tak napriklad zbytocne zabijal a jediny komu veril boj jeho kon, ktoreho dokonca chcel dosadit za cisara</p>
+		<h3> klaudius </h3>
+		<p> klaudiov stryko dosadeny pretorianmi, vela expandoval, vyvijal infrastrukturu, staval</p>
+		<h3> nero </h3>
+		<p> klaudion nevlastny syn, vyzeral najprv slusne, no potom zacal robit divne veci a podpalil rim, lebo to chcecl hodit na krestanov </p>
+		<h2> flaviovka dynastia </h2>
+		<p> vybuchol vezuv, stavaju koloseum </p>
+		<h3> vespasianus </h3>
+		<h3> titus </h3>
+		<h3> domitian </h3>
+		<h3> nerva </h3>
+		<h3> trajanus </h3>
+		<p> spravil dobre reformy, do vlady isli spravni ludia, staval hadrianov val </p>
+		<h3> markus aurelius </h3>
+		<p> dalej expandoval, no uz sa to zhorsovalo , zabranoval germanom vstupit do rima</p>
+		<h3> karakala </h3>
+		<p> zvysil zold, no nebolo to dobre, lebo boli ekonomicke problemy </p>
 </html>
