--- a/dej/dej-e.html
+++ b/dej/dej-e.html
@@ -208,24 +208,28 @@
 			</td>
 			<td> <img src=augustus.jpg width = 200 /> </td>
 		</tr></table>
-		<h3> tiberius </h3>
-		<p> celkom staliblny, no stiahol sa do sildla na ostrove capri, riadil odtial risu dopismi a listami, imperium fungovalo</p>
-		<h3> kaligula </h3>
-		<p> jeho syn, vladol slubne, daval mnoho vyhod, vyhnanci sa mohli vracat na uzemie..., no potom zosalel az kym ho nezabil vodca pretorianov  - tak napriklad zbytocne zabijal a jediny komu veril boj jeho kon, ktoreho dokonca chcel dosadit za cisara</p>
-		<h3> klaudius </h3>
-		<p> klaudiov stryko dosadeny pretorianmi, vela expandoval, vyvijal infrastrukturu, staval</p>
-		<h3> nero </h3>
-		<p> klaudion nevlastny syn, vyzeral najprv slusne, no potom zacal robit divne veci a podpalil rim, lebo to chcecl hodit na krestanov </p>
-		<h2> flaviovka dynastia </h2>
-		<p> vybuchol vezuv, stavaju koloseum </p>
-		<h3> vespasianus </h3>
-		<h3> titus </h3>
-		<h3> domitian </h3>
-		<h3> nerva </h3>
-		<h3> trajanus </h3>
-		<p> spravil dobre reformy, do vlady isli spravni ludia, staval hadrianov val </p>
-		<h3> markus aurelius </h3>
-		<p> dalej expandoval, no uz sa to zhorsovalo , zabranoval germanom vstupit do rima</p>
-		<h3> karakala </h3>
-		<p> zvysil zold, no nebolo to dobre, lebo boli ekonomicke problemy </p>
+		<h2> Júliovsko-Klaudiovská dynastia </h2>
+		<ul>
+			<li> Tiberius </li>
+			<li> Caligula </li>
+			<li> Claudius </li>
+			<li> Nero </li>
+		</ul>
+		<h2> Flaviovska Dynastia </h2>
+		<ul>
+			<li> vybuchol vezuv </li>
+			<li> koloseum </li>
+		</ul>
+		<h2> dynastia adoptivnych cisarov </h2>
+		<ul>
+			<li> Trajan </li>
+			<li> Hadrian </li>
+			<li> Marcus Aurelius </li>
+			<li> Najvacsi rozmach </li>
+			<li> MA - filozof na trone </li>
+			<li> bol aj na slovenku </li>
+		</ul>
+		<img src = o_imperio_romano_em_117.png width = 300 />
+		<h2> dynastia severovcov - zaciato konca </h2>
+		<h2> dynastia vojenskych cisarov </h2>
 </html>
